--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "urdev",
   "version": "0.1.0",
+  "homepage": "http://urdev.xyz/urdev2",
   "private": true,
   "dependencies": {
     "react": "^16.7.0",
-    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "terser": "^3.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
