--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-hamburgers": "^1.0.0",
     "react-scripts": "2.1.3",
     "terser": "^3.14.1"
   },
