--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.7.0",
     "react-hamburgers": "^1.0.0",
     "react-scripts": "2.1.3",
+    "react-scroll-to": "^2.0.5",
     "terser": "^3.14.1"
   },
   "scripts": {
